dev-ops/k8-configs/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: front-end
  template:
    metadata:
      labels:
        component: front-end
    spec:
      containers:
        - name: front-end
          image: mehrankhanjan/idowhale-front
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: front-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: front-end
  ports:
    - port: 3000
      targetPort: 3000
